pagination fix on small screens

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -424,7 +424,14 @@
 
 .govuk-pagination__item__hidden {
   @include govuk-media-query($until: tablet) {
+    content: "...";
     display: block;
+  }
+}
+
+.govuk-pagination__item--ellipses__hidden {
+  @include govuk-media-query($from: tablet) {
+    display: none;
   }
 }
 
